#   Copyright 2014 Commonwealth Bank of Australia
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

#@namespace scala au.com.cba.omnia.audition.thrift

struct Thrift100 {
   1 : i32    column1
   2 : string column2
   3 : string column3
   4 : string column4
   5 : string column5
   6 : string column6
   7 : string column7
   8 : string column8
   9 : string column9
  10 : string column10
  11 : string column11
  12 : string column12
  13 : string column13
  14 : string column14
  15 : string column15
  16 : string column16
  17 : string column17
  18 : string column18
  19 : string column19
  20 : string column20
  21 : string column21
  22 : string column22
  23 : string column23
  24 : string column24
  25 : string column25
  26 : string column26
  27 : string column27
  28 : string column28
  29 : string column29
  30 : string column30
  31 : string column31
  32 : string column32
  33 : string column33
  34 : string column34
  35 : string column35
  36 : string column36
  37 : string column37
  38 : string column38
  39 : string column39
  40 : string column40
  41 : string column41
  42 : string column42
  43 : string column43
  44 : string column44
  45 : string column45
  46 : string column46
  47 : string column47
  48 : string column48
  49 : string column49
  50 : string column50
  51 : string column51
  52 : string column52
  53 : string column53
  54 : string column54
  55 : string column55
  56 : string column56
  57 : string column57
  58 : string column58
  59 : string column59
  60 : string column60
  61 : string column61
  62 : string column62
  63 : string column63
  64 : string column64
  65 : string column65
  66 : string column66
  67 : string column67
  68 : string column68
  69 : string column69
  70 : string column70
  71 : string column71
  72 : string column72
  73 : string column73
  74 : string column74
  75 : string column75
  76 : string column76
  77 : string column77
  78 : string column78
  79 : string column79
  80 : string column80
  81 : string column81
  82 : string column82
  83 : string column83
  84 : string column84
  85 : string column85
  86 : string column86
  87 : string column87
  88 : string column88
  89 : string column89
  90 : string column90
  91 : string column91
  92 : string column92
  93 : string column93
  94 : string column94
  95 : string column95
  96 : string column96
  97 : string column97
  98 : string column98
  99 : string column99
 100 : string column100
}

