#   Copyright 2014 Commonwealth Bank of Australia
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

#@namespace scala au.com.cba.omnia.audition.thrift

struct Thrift250 {
   1 : i32    column1
   2 : string column2
   3 : string column3
   4 : string column4
   5 : string column5
   6 : string column6
   7 : string column7
   8 : string column8
   9 : string column9
  10 : string column10
  11 : string column11
  12 : string column12
  13 : string column13
  14 : string column14
  15 : string column15
  16 : string column16
  17 : string column17
  18 : string column18
  19 : string column19
  20 : string column20
  21 : string column21
  22 : string column22
  23 : string column23
  24 : string column24
  25 : string column25
  26 : string column26
  27 : string column27
  28 : string column28
  29 : string column29
  30 : string column30
  31 : string column31
  32 : string column32
  33 : string column33
  34 : string column34
  35 : string column35
  36 : string column36
  37 : string column37
  38 : string column38
  39 : string column39
  40 : string column40
  41 : string column41
  42 : string column42
  43 : string column43
  44 : string column44
  45 : string column45
  46 : string column46
  47 : string column47
  48 : string column48
  49 : string column49
  50 : string column50
  51 : string column51
  52 : string column52
  53 : string column53
  54 : string column54
  55 : string column55
  56 : string column56
  57 : string column57
  58 : string column58
  59 : string column59
  60 : string column60
  61 : string column61
  62 : string column62
  63 : string column63
  64 : string column64
  65 : string column65
  66 : string column66
  67 : string column67
  68 : string column68
  69 : string column69
  70 : string column70
  71 : string column71
  72 : string column72
  73 : string column73
  74 : string column74
  75 : string column75
  76 : string column76
  77 : string column77
  78 : string column78
  79 : string column79
  80 : string column80
  81 : string column81
  82 : string column82
  83 : string column83
  84 : string column84
  85 : string column85
  86 : string column86
  87 : string column87
  88 : string column88
  89 : string column89
  90 : string column90
  91 : string column91
  92 : string column92
  93 : string column93
  94 : string column94
  95 : string column95
  96 : string column96
  97 : string column97
  98 : string column98
  99 : string column99
 100 : string column100
 101 : string column101
 102 : string column102
 103 : string column103
 104 : string column104
 105 : string column105
 106 : string column106
 107 : string column107
 108 : string column108
 109 : string column109
 110 : string column110
 111 : string column111
 112 : string column112
 113 : string column113
 114 : string column114
 115 : string column115
 116 : string column116
 117 : string column117
 118 : string column118
 119 : string column119
 120 : string column120
 121 : string column121
 122 : string column122
 123 : string column123
 124 : string column124
 125 : string column125
 126 : string column126
 127 : string column127
 128 : string column128
 129 : string column129
 130 : string column130
 131 : string column131
 132 : string column132
 133 : string column133
 134 : string column134
 135 : string column135
 136 : string column136
 137 : string column137
 138 : string column138
 139 : string column139
 140 : string column140
 141 : string column141
 142 : string column142
 143 : string column143
 144 : string column144
 145 : string column145
 146 : string column146
 147 : string column147
 148 : string column148
 149 : string column149
 150 : string column150
 151 : string column151
 152 : string column152
 153 : string column153
 154 : string column154
 155 : string column155
 156 : string column156
 157 : string column157
 158 : string column158
 159 : string column159
 160 : string column160
 161 : string column161
 162 : string column162
 163 : string column163
 164 : string column164
 165 : string column165
 166 : string column166
 167 : string column167
 168 : string column168
 169 : string column169
 170 : string column170
 171 : string column171
 172 : string column172
 173 : string column173
 174 : string column174
 175 : string column175
 176 : string column176
 177 : string column177
 178 : string column178
 179 : string column179
 180 : string column180
 181 : string column181
 182 : string column182
 183 : string column183
 184 : string column184
 185 : string column185
 186 : string column186
 187 : string column187
 188 : string column188
 189 : string column189
 190 : string column190
 191 : string column191
 192 : string column192
 193 : string column193
 194 : string column194
 195 : string column195
 196 : string column196
 197 : string column197
 198 : string column198
 199 : string column199
 200 : string column200
 201 : string column201
 202 : string column202
 203 : string column203
 204 : string column204
 205 : string column205
 206 : string column206
 207 : string column207
 208 : string column208
 209 : string column209
 210 : string column210
 211 : string column211
 212 : string column212
 213 : string column213
 214 : string column214
 215 : string column215
 216 : string column216
 217 : string column217
 218 : string column218
 219 : string column219
 220 : string column220
 221 : string column221
 222 : string column222
 223 : string column223
 224 : string column224
 225 : string column225
 226 : string column226
 227 : string column227
 228 : string column228
 229 : string column229
 230 : string column230
 231 : string column231
 232 : string column232
 233 : string column233
 234 : string column234
 235 : string column235
 236 : string column236
 237 : string column237
 238 : string column238
 239 : string column239
 240 : string column240
 241 : string column241
 242 : string column242
 243 : string column243
 244 : string column244
 245 : string column245
 246 : string column246
 247 : string column247
 248 : string column248
 249 : string column249
 250 : string column250
}

